# TimeTracker

./: .gitignore  README.md  pyproject.toml
main/TimeTracker/: __main__.py
main/TimeTracker/src/: commands.py  config.py  database.py  log.py
