[tool.poetry]
name = "TimeTracker"
version = "1.0.1"
description = ""
authors = ["marcelm9 <marcel.menzel09@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "TimeTracker", from = "main" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
